--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </h1><hr>
         </div>
         <div class="intro">
-            <img id="first_image" src="images/botanico0.jpg" alt="An introductory photo of Mateo at Bogota's Botanic ">
+            <img id="first_image" src="botanico0.jpg" alt="An introductory photo of Mateo at Bogota's Botanic ">
             <div>
                 <p id="intro_par">
                     Hi! I'm Mateo, a junior at Thornton Academy, Saco, Maine. I created this homepage mainly because it's a homework assignment
